# SLU

./: .gitignore  README.md  commands.py  pyproject.toml
logs/cifar-10/: mean_best_scores.txt
logs/mnist/: mean_best_scores.txt
logs/moons/: nets.pth  preprocessor.pth
logs/moons/ReLU/: train_loss.pth  val_loss.pth
logs/moons/SLU_(individual)/: train_loss.pth  val_loss.pth
logs/moons/SLU_(shared)/: train_loss.pth  val_loss.pth
logs/reciprocal/: nets.pth  preprocessor.pth
logs/reciprocal/ReLU/: train_loss.pth  val_loss.pth
logs/reciprocal/SLU_(individual)/: train_loss.pth  val_loss.pth
logs/reciprocal/SLU_(shared)/: train_loss.pth  val_loss.pth
logs/root/: nets.pth  preprocessor.pth
logs/root/ReLU/: train_loss.pth  val_loss.pth
logs/root/SLU_(individual)/: train_loss.pth  val_loss.pth
logs/root/SLU_(shared)/: train_loss.pth  val_loss.pth
logs/spirals/: nets.pth  preprocessor.pth
logs/spirals/ReLU/: train_loss.pth  val_loss.pth
logs/spirals/SLU_(individual)/: train_loss.pth  val_loss.pth
logs/spirals/SLU_(shared)/: train_loss.pth  val_loss.pth
logs/square/: nets.pth  preprocessor.pth
logs/square/ReLU/: train_loss.pth  val_loss.pth
logs/square/SLU_(individual)/: train_loss.pth  val_loss.pth
logs/square/SLU_(shared)/: train_loss.pth  val_loss.pth
src/: colors.py  layers.py  types.py  utils.py
src/experiments/: __init__.py  base.py  classification_2d.py  classification_cifar10.py  classification_mnist.py  regression_1d.py
src/visualizations/: __init__.py  ctemp.py  plot_activations.py  plot_slu.py  temp.py
(+85 files in other folders)
