[tool.poetry]
name = "activation functions comparison"
version = "0.1.0"
description = "A set of experiments aimed to evaluate modern activation functions in various tasks"
authors = ["Ivan Lytvynenko <lytvynenko.i.d@gmail.com>"]
license = "GPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
torch = "^2.2.1"
numpy = "^1.26.4"
matplotlib = "^3.8.3"
scikit-learn = "^1.4.1.post1"
torchvision = "^0.17.1"
fire = "^0.5.0"

[tool.black]
line-length = 90
target-version = ["py311"]

[tool.isort]
src_paths = ["src"]
profile = "black"
line_length = 90
lines_after_imports = 2

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.flake8]
max-line-length = 90
ignore = ['E203', 'E501', 'W503', 'B950']
max-complexity = 12
select = ['B', 'C', 'E', 'F', 'W', 'B9']
per-file-ignores = [
    # for easier imports to __init__ without __all__
    '**/__init__.py: F401',
    # file to define custom types
    'types.py: F401',
]
count = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
